[package]
name = "railog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
candle-core = { git = "https://github.com/huggingface/candle.git", tag = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", tag = "0.9.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", tag = "0.9.1" }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
dbscan = "0.3.1"
hf-hub = "0.4.3"
ndarray = { version = "0.15.6", features = ["serde-1"] }
ndarray-stats = "0.5.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"
